# atproto-db-snapshot

./: .gitignore  Cargo.toml  README.md  build.rs  go.mod  go.sum  queries.sql  start.sh
.cargo/: config.toml.example
.github/workflows/: ci.yml  tests.yml
cmd/at-snapshot/: main.go
cmd/at-snapshotter/: main.go  store.go
deploy/: README.md  at-snapshot.example.toml  at-snapshot.toml  modal_app.py
internal/archive/: edges.go  post_embeds.go  post_embeds_test.go  posts.go  profiles_deletes.go  types.go  writer.go  writer_test.go
internal/atrecord/: atrecord.go  atrecord_test.go
internal/bootstrap/: bootstrap.go  bootstrap_test.go  intern_helper.go  metrics.go  progress.go  store.go  testfixture.go
internal/config/: config.go  config_test.go  file.go  file_test.go  load.go  load_test.go
internal/constellation/: client.go  client_test.go  constellation.go  constellation_test.go  fake.go
internal/duckdbstore/: all.go  all_test.go  store.go  store_test.go  streaming_writer.go  writer.go
internal/e2e/: e2e_test.go  helpers.go  multiday_test.go  pipeline_test.go  restart_test.go  takedowns_test.go
internal/intern/: intern.go  intern_test.go
internal/jetstream/: fake.go  jetstream.go  jetstream_test.go  ws.go  ws_test.go
internal/labels/: store.go  store_test.go  subscribe.go  (+1 more)
scripts/: bucket_size.py
specs/: 001_boostrap.md  001_bootstrap.md  002_post_embeds.md  003_listrecords_backfill.md
src/: cli.rs  config.rs  disk.rs  hash.rs  hydrate.rs  inspect.rs  lib.rs  main.rs  metadata.rs  mirror.rs  stage.rs  tid.rs  upload.rs
tests/: end_to_end.rs
(+109 files in other folders)
